Fix test. Fix cursor alignment.

--- a/share-ace.css
+++ b/share-ace.css
@@ -1,24 +1,24 @@
 .ace-select-0 {position:absolute;background:#660000;z-index:5}
 .ace-cursor-0 {position:absolute;background:#cc0000;z-index:6;width:2px!important}
-.ace-cursor-0::after {position:absolute;background:#cc0000;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-0::after {position:absolute;background:#cc0000;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
 .ace-select-1 {position:absolute;background:#676800;z-index:5}
 .ace-cursor-1 {position:absolute;background:#ccce00;z-index:6;width:2px!important}
-.ace-cursor-1::after {position:absolute;background:#ccce00;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-1::after {position:absolute;background:#ccce00;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
 .ace-select-2 {position:absolute;background:#006302;z-index:5}
 .ace-cursor-2 {position:absolute;background:#00c903;z-index:6;width:2px!important}
-.ace-cursor-2::after {position:absolute;background:#00c903;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-2::after {position:absolute;background:#00c903;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
 .ace-select-3 {position:absolute;background:#006334;z-index:5}
 .ace-cursor-3 {position:absolute;background:#01c86a;z-index:6;width:2px!important}
-.ace-cursor-3::after {position:absolute;background:#01c86a;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-3::after {position:absolute;background:#01c86a;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
 .ace-select-4 {position:absolute;background:#006567;z-index:5}
 .ace-cursor-4 {position:absolute;background:#00c8cd;z-index:6;width:2px!important}
-.ace-cursor-4::after {position:absolute;background:#00c8cd;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-4::after {position:absolute;background:#00c8cd;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
 .ace-select-5 {position:absolute;background:#010064;z-index:5}
 .ace-cursor-5 {position:absolute;background:#0200ca;z-index:6;width:2px!important}
-.ace-cursor-5::after {position:absolute;background:#0200ca;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-5::after {position:absolute;background:#0200ca;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
 .ace-select-6 {position:absolute;background:#660064;z-index:5}
 .ace-cursor-6 {position:absolute;background:#cc00c9;z-index:6;width:2px!important}
-.ace-cursor-6::after {position:absolute;background:#cc00c9;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-6::after {position:absolute;background:#cc00c9;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
 .ace-select-7 {position:absolute;background:#660032;z-index:5}
 .ace-cursor-7 {position:absolute;background:#cc0065;z-index:6;width:2px!important}
-.ace-cursor-7::after {position:absolute;background:#cc0065;z-index:6;top:-4px;content:' ';left:-3px;font-family:Arial;padding:1px 2px;width:4px;height:4px}
+.ace-cursor-7::after {position:absolute;background:#cc0065;z-index:6;top:-4px;content:' ';font-family:Arial;padding:1px 2px;width:4px;height:4px}
